--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,49 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<H1>GRND</H1>
-	
+	<div class="wrapper">
+		<div class="header">
+			<header class="header__head">
+				<div class="container">
+					<div class="header__bar">
+						<a class="header__logo-link" href="#">
+							<img class="header__logo" src="images/logo.svg" alt="GRND">
+						</a>
+						<a class="header__burger" href="#"></a>
+						<nav class="header__nav">
+							<div class="header__nav-close"></div>
+							<ul class="header__nav-list">
+								<li class="header__nav-item">
+									<a class="header__nav-item-link active" href="#">Home</a>
+								</li>
+								<li class="header__nav-item">
+									<a class="header__nav-item-link" href="#">Events</a>
+								</li>
+								<li class="header__nav-item">
+									<a class="header__nav-item-link" href="#">Bar</a>
+								</li>
+								<li class="header__nav-item">
+									<a class="header__nav-item-link" href="#">Contact</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+			</header>
+		</div>
+			<section class="nightClub container">
+				<img class="nightClub__image-club" src="images/nightClub.svg" alt="night club">
+				<img class="nightClub__image-grnd" src="images/grnd.svg" alt="grnd">
+			</section>
+			<section class="offer container">
+				<article class="offer__card">
+					<h2 class="offer__card-title">Special offer</h2>
+					<h3 class="offer__card-subtitle ">Cucumberbatch</h3>
+					<img class="offer__card-image" src="images/cucumberbach.jpg" alt="Cucumberbatch">
+					<a class="offer__card-button " href="#">More</a>
+				</article>
+			</section>
+	</div>
 	<script src="js/main.min.js"></script>
 </body>
 </html>
