--- a/app/index.html
+++ b/app/index.html
@@ -41,13 +41,19 @@
 				<img class="nightClub__image-club" src="images/nightClub.svg" alt="night club">
 				<img class="nightClub__image-grnd" src="images/grnd.svg" alt="grnd">
 			</section>
-			<section class="offer container">
-				<article class="offer__card">
-					<h2 class="offer__card-title">Special offer</h2>
-					<h3 class="offer__card-subtitle ">Cucumberbatch</h3>
-					<img class="offer__card-image" src="images/cucumberbach.jpg" alt="Cucumberbatch">
-					<a class="offer__card-button " href="#">More</a>
-				</article>
+			<section class="offer">
+				<div class="container">
+					<article class="offer__card">
+						<div class="offer__card-textcontent">
+							<h2 class="offer__card-title">Special offer</h2>
+							<h3 class="offer__card-subtitle ">Cucumberbatch</h3>
+							<a class="offer__card-button " href="#">More</a>
+						</div>
+						<div class="offer__card-image">
+							<img class="offer__card-image-content" src="images/cucumberbach.jpg" alt="Cucumberbatch">
+						</div>
+					</article>
+				</div>
 			</section>
 	</div>
 	<script src="js/main.min.js"></script>
