added section about

--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,21 @@
 				</div>
 			</section>
 	</div>
+	<div class="wrapper-gradient">
+		<section class="about container">
+			
+			<h2 class="about__title">About the project</h2>
+			<div class="about__text">
+				<p>
+				GRND is a new night club with a large dance floor 
+				for DJ performances, as well as a bar with a variety
+				of drinks, including exclusive cocktails. We host themed parties with modern equipment and lighting effects to create a celebratory atmosphere. Come to GRND for 
+				an unforgettable night in the city center.
+				</p>
+			</div>
+			
+		</section>
+	</div>
 	<script src="js/main.min.js"></script>
 </body>
 </html>
