added you section

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,6 @@
 	</div>
 	<div class="wrapper-gradient">
 		<section class="about container">
-			
 			<h2 class="about__title">About the project</h2>
 			<div class="about__text">
 				<p>
@@ -69,6 +68,36 @@
 				</p>
 			</div>
 			
+		</section>
+	</div>
+	<div class="wrapper">
+		<section class="you container">
+			<h2 class="you__title">You</h2>
+			<article class="you__card">
+				<div class="you__card-image">
+					<img class="you__card-image-content" src="images/you1.jpg" alt="">
+				</div>
+				<h3 class="you__card-subtitle">
+					Electric Oasis
+				</h3>
+			</article>
+			<article class="you__card right">
+				
+				<div class="you__card-image">
+					<img class="you__card-image-content" src="images/you2.jpg" alt="">
+				</div>
+				<h3 class="you__card-subtitle">
+					Midnight Masquerade
+				</h3>
+			</article>
+			<article class="you__card">
+				<div class="you__card-image">
+					<img class="you__card-image-content" src="images/you3.jpg" alt="">
+				</div>
+				<h3 class="you__card-subtitle">
+					Electric Echo
+				</h3>
+			</article>
 		</section>
 	</div>
 	<script src="js/main.min.js"></script>
