--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,27 @@
 				</h3>
 			</article>
 		</section>
+
+		<section class="we container">
+			<h2 class="we__title">We</h2>
+				<div class="we__team-image">
+					<img class="we__team-image-content" src="images/we-image.jpg" alt="team">
+				</div>
+		</section>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__bar">
+					<a class="footer__logo-link" href="#">
+						<img class="footer__logo" src="images/logo.svg" alt="GRND">
+					</a>
+					<p class="footer__text">Turn on, tune in, drop out</p>
+					<ul class="footer__creators">
+						<li class="footer__creators-name">©Elvira Panchenko</li>
+						<li class="footer__creators-name">©Maks Malaniia</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
 	</div>
 	<script src="js/main.min.js"></script>
 </body>
