--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 									<a class="header__nav-item-link active" href="#">Home</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-item-link" href="#">Events</a>
+									<a class="header__nav-item-link" href="html/index.html">Events</a>
 								</li>
 								<li class="header__nav-item">
 									<a class="header__nav-item-link" href="#">Bar</a>
