added page for first event

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -24,7 +24,7 @@
 									<a class="header__nav-item-link" href="../index.html">Home</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-item-link active" href="html/index.html">Events</a>
+									<a class="header__nav-item-link active" href="#">Events</a>
 								</li>
 								<li class="header__nav-item">
 									<a class="header__nav-item-link" href="#">Bar</a>
@@ -53,7 +53,7 @@
                         This event will feature neon decor, vibrant lighting, 
                         and an energetic atmosphere that will keep you moving all night long. 
                     </p>
-                    <a class="events__card-link" href="#">I want to!</a>
+                    <a class="events__card-link" href="event1.html">I want to!</a>
                 </div>
 			</article>
 			<article class="events__card right">
