added page for the 2nd and 3rd event

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -68,7 +68,7 @@
                         This event will feature neon decor, vibrant lighting, 
                         and an energetic atmosphere that will keep you moving all night long. 
                     </p>
-                    <a class="events__card-link" href="#">I want to!</a>
+                    <a class="events__card-link" href="event2.html">I want to!</a>
                 </div>
 			</article>
             <article class="events__card">
@@ -83,7 +83,7 @@
                         This event will feature neon decor, vibrant lighting, 
                         and an energetic atmosphere that will keep you moving all night long. 
                     </p>
-                    <a class="events__card-link" href="#">I want to!</a>
+                    <a class="events__card-link" href="event3.html">I want to!</a>
                 </div>
 			</article>
         </section>
