--- a/app/html/event1.html
+++ b/app/html/event1.html
@@ -82,8 +82,11 @@
             </article>
         </section>
 
-        <form class="form" action="">
-            
+        <form class="form" action="#">
+            <h3 class="form__title">Want to attend the event?</h3>
+            <input class="form__name-input" type="text" placeholder="name" id="name">
+            <input class="form__phone-input" type="tel" placeholder="phone" id="phone">
+            <input class="form__button-input" type="submit" id="but" value="I'll be there!">
         </form>
 
         <footer class="footer">
