added cocktail oriental

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -27,7 +27,7 @@
 									<a class="header__nav-item-link active" href="#">Events</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-item-link" href="#">Bar</a>
+									<a class="header__nav-item-link" href="../html/bar.html">Bar</a>
 								</li>
 								<li class="header__nav-item">
 									<a class="header__nav-item-link" href="#">Contact</a>
