--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 									<a class="header__nav-item-link" href="html/index.html">Events</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-item-link" href="#">Bar</a>
+									<a class="header__nav-item-link" href="html/bar.html">Bar</a>
 								</li>
 								<li class="header__nav-item">
 									<a class="header__nav-item-link" href="#">Contact</a>
