--- a/app/html/bar.html
+++ b/app/html/bar.html
@@ -77,7 +77,9 @@
                             <p class="drinks__card-icons-number">200</p>
                         </div>
                     </div>
-                    <p class="drinks__card-price">$5</p>
+                    <div class="drinks__card-price">
+                        <p>$5</p>
+                    </div>
                 </div>
             </div>
             <h3 class="drinks__title">Beers</h3>
