added left cocktail cards

--- a/app/html/bar.html
+++ b/app/html/bar.html
@@ -82,9 +82,92 @@
                     </div>
                 </div>
             </div>
-            <h3 class="drinks__title">Beers</h3>
 
+            <div class="drinks__card">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink3.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent">
+                    <div class="drinks__card-textcontent-main">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Ana</p>
+                            <p class="drinks__card-subtitle">fresh, lime, gooseberry and sorrel</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">200</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price">
+                        <p>$5</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="drinks__card">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink5.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent">
+                    <div class="drinks__card-textcontent-main">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Bliss</p>
+                            <p class="drinks__card-subtitle"> tequila, Maraschino liqueur, pineapple juice, lime juice</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">200</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price">
+                        <p>$10</p>
+                    </div>
+                </div>
+            </div>
+            <h3 class="drinks__title">Beers</h3>
+            <div class="drinks__card">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink7.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent">
+                    <div class="drinks__card-textcontent-main">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Blok</p>
+                            <p class="drinks__card-subtitle">its strong hoppy flavor and high bitterness.</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">200</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price">
+                        <p>$2</p>
+                    </div>
+                </div>
+            </div>
             <h3 class="drinks__title">Shots</h3>
+
+            <div class="drinks__card">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink10.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent">
+                    <div class="drinks__card-textcontent-main">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Caramel</p>
+                            <p class="drinks__card-subtitle">caramel vodka, butterscotch schnapps, a pinch of sea salt.</p>
+                            <p class="drinks__card-subtitle">Middle</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">200</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price">
+                        <p>$10</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <footer class="footer">
