added drinks cards to the bar page

--- a/app/html/bar.html
+++ b/app/html/bar.html
@@ -83,6 +83,27 @@
                 </div>
             </div>
 
+            <div class="drinks__card right">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink2.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent right-textcontent">
+                    <div class="drinks__card-textcontent-main card-textcontent-main-right">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Foam</p>
+                            <p class="drinks__card-subtitle">Gin, elderflower, violet liqueur, rose water foam</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">200</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price card-price-right">
+                        <p>$10</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="drinks__card">
                 <div class="drinks__card-image-content">
                     <img class="drinks__card-image" src="../images/drink3.jpg" alt="drink">
@@ -100,6 +121,27 @@
                     </div>
                     <div class="drinks__card-price">
                         <p>$5</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="drinks__card right">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink4.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent right-textcontent">
+                    <div class="drinks__card-textcontent-main card-textcontent-main-right">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Bloom</p>
+                            <p class="drinks__card-subtitle">dark rum, pomegranate juice, lime juice, walnut vodka syrup</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">200</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price card-price-right">
+                        <p>$8</p>
                     </div>
                 </div>
             </div>
@@ -124,6 +166,28 @@
                     </div>
                 </div>
             </div>
+
+            <div class="drinks__card right">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink6.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent right-textcontent">
+                    <div class="drinks__card-textcontent-main card-textcontent-main-right">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Caribbean</p>
+                            <p class="drinks__card-subtitle">rum, Apricot Brandy liqueur, pineapple juice, passion fruit</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">200</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price card-price-right">
+                        <p>$8</p>
+                    </div>
+                </div>
+            </div>
+
             <h3 class="drinks__title">Beers</h3>
             <div class="drinks__card">
                 <div class="drinks__card-image-content">
@@ -137,7 +201,7 @@
                         </div>
                         <div class="drinks__card-icons">
                             <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
-                            <p class="drinks__card-icons-number">200</p>
+                            <p class="drinks__card-icons-number">500</p>
                         </div>
                     </div>
                     <div class="drinks__card-price">
@@ -145,8 +209,49 @@
                     </div>
                 </div>
             </div>
-            <h3 class="drinks__title">Shots</h3>
+            <div class="drinks__card right">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink8.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent right-textcontent">
+                    <div class="drinks__card-textcontent-main card-textcontent-main-right">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Dark beer</p>
+                            <p class="drinks__card-subtitle">its strong hoppy flavor and high bitterness.</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">500</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price card-price-right">
+                        <p>$2</p>
+                    </div>
+                </div>
+            </div>
 
+            <h3 class="drinks__title">Shots</h3>
+            <div class="drinks__card right">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink9.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent right-textcontent">
+                    <div class="drinks__card-textcontent-main card-textcontent-main-right">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Electric</p>
+                            <p class="drinks__card-subtitle">with vodka, blue curacao, lemon juice, and a splash of sprite.</p>
+                            <p class="drinks__card-subtitle">Middle</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">100</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price card-price-right">
+                        <p>$8</p>
+                    </div>
+                </div>
+            </div>
             <div class="drinks__card">
                 <div class="drinks__card-image-content">
                     <img class="drinks__card-image" src="../images/drink10.jpg" alt="drink">
@@ -160,10 +265,31 @@
                         </div>
                         <div class="drinks__card-icons">
                             <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
-                            <p class="drinks__card-icons-number">200</p>
+                            <p class="drinks__card-icons-number">100</p>
                         </div>
                     </div>
                     <div class="drinks__card-price">
+                        <p>$10</p>
+                    </div>
+                </div>
+            </div>
+            <div class="drinks__card right">
+                <div class="drinks__card-image-content">
+                    <img class="drinks__card-image" src="../images/drink11.jpg" alt="drink">
+                </div>
+                <div class="drinks__card-textcontent right-textcontent">
+                    <div class="drinks__card-textcontent-main card-textcontent-main-right">
+                        <div class="drinks__card-descrioption">
+                            <p class="drinks__card-title">Sour Patch</p>
+                            <p class="drinks__card-subtitle">apple schnapps, sour mix, and a splash of Sprite.</p>
+                            <p class="drinks__card-subtitle">Middle</p>
+                        </div>
+                        <div class="drinks__card-icons">
+                            <img class="drinks__card-icons-heart" src="../images/heart.svg" alt="heart">
+                            <p class="drinks__card-icons-number">100</p>
+                        </div>
+                    </div>
+                    <div class="drinks__card-price card-price-right">
                         <p>$10</p>
                     </div>
                 </div>
