added contact page

--- a/app/html/bar.html
+++ b/app/html/bar.html
@@ -30,7 +30,7 @@
 									<a class="header__nav-item-link active" href="#">Bar</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-item-link" href="#">Contact</a>
+									<a class="header__nav-item-link" href="../html/contact.html">Contact</a>
 								</li>
 							</ul>
 						</nav>
@@ -41,9 +41,9 @@
         <section class="bar container">
             <h2 class="bar__title">Bar</h2>
             <ul class="bar__links">
-                <li class="bar__link-item"><a class="bar__link" href="#">cocktails</a></li>
-                <li class="bar__link-item"><a class="bar__link" href="#">beers</a></li>
-                <li class="bar__link-item"><a class="bar__link" href="#">shots</a></li>
+                <li class="bar__link-item"><a class="bar__link" href="#cocktails">cocktails</a></li>
+                <li class="bar__link-item"><a class="bar__link" href="#beers">beers</a></li>
+                <li class="bar__link-item"><a class="bar__link" href="#shots">shots</a></li>
             </ul>
         </section>
     </div>
@@ -61,7 +61,7 @@
     </div>
     <div class="wrapper">
         <section class="drinks container">
-            <h3 class="drinks__title">Cocktails</h3>
+            <h3 class="drinks__title" id="cocktails">Cocktails</h3>
             <div class="drinks__card">
                 <div class="drinks__card-image-content">
                     <img class="drinks__card-image" src="../images/drink1.jpg" alt="drink">
@@ -188,7 +188,7 @@
                 </div>
             </div>
 
-            <h3 class="drinks__title">Beers</h3>
+            <h3 class="drinks__title" id="beers">Beers</h3>
             <div class="drinks__card">
                 <div class="drinks__card-image-content">
                     <img class="drinks__card-image" src="../images/drink7.jpg" alt="drink">
@@ -230,7 +230,7 @@
                 </div>
             </div>
 
-            <h3 class="drinks__title">Shots</h3>
+            <h3 class="drinks__title" id="shots">Shots</h3>
             <div class="drinks__card right">
                 <div class="drinks__card-image-content">
                     <img class="drinks__card-image" src="../images/drink9.jpg" alt="drink">
