--- a/app/html/index.html
+++ b/app/html/index.html
@@ -30,7 +30,7 @@
 									<a class="header__nav-item-link" href="../html/bar.html">Bar</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-item-link" href="#">Contact</a>
+									<a class="header__nav-item-link" href="../html/contact.html">Contact</a>
 								</li>
 							</ul>
 						</nav>
